--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<!-- <h1 id="logo"><a href="#">Sohini Dutta</a></h1> -->
-					<p>Hi! This is Sohini. I am an Astronomy graduate from Indian Institute of
-						Technology-Indore (IIT-I).
+					<p>Hi! This is Sohini. I am a PhD scholar at the Jodrell Bank Centre for Astrophysics-The University of Manchester.
 						<br />
 							<a href="mailto: sohinixcvii@gmail.com"> Send me an email. </a>
 						<br />
@@ -61,7 +60,7 @@
 										<h2>Sohini Dutta</h2>
 										<h3> About Me </h3>
 									</header>
-									<p>I completed my Master's degree in Astronomy from the Department of Astronomy, Astrophysics and Space Engineering, Indian Institute of Technology, Indore. My present research interests lie in the field of Cosmology and the very early universe, particularly in the areas of Inflation, Galaxy Evolution, Cosmic Dawn, the Epoch of Reionization etc. I worked as a Data Scientist at American Express and now, I am looking forward to joining the Jodrell Bank Centre of Astrophysics at the University of Manchester as a PhD student. If you would like to chat with me, find my email in the navigation bar!
+									<p>I am a PhD student at the Jodrell Bank Centre for Astrophysics-The University of Manchester. I completed my Master's degree in Astronomy from the Department of Astronomy, Astrophysics and Space Engineering, Indian Institute of Technology, Indore in 2022 and went on to work at American Express as a data scientist from October 2022 to June 2023. My present research interests lie in the field of Cosmology and the very early universe, particularly in the areas of Inflation, Galaxy Evolution, Cosmic Dawn, the Epoch of Reionization etc. If you would like to chat with me, find my email in the navigation bar!
 									</p>
 								</div>
 							</section>
@@ -110,8 +109,7 @@
 							<div class="container">
 								<h3>Professional Journey: </h3>
 								<p> <ul>
-								<li> <b>October 2023: </b> Incoming PhD student, Jodrell Bank Center for Astrophysics, University of Manchester, Manchester, UK </li>
-									<ul><li>(Also selected by University of Cambridge, University of Heidelberg, and Swinburne University for PhD)</li></ul>
+								<li> <b>October 2023-Present: </b>  PhD student, Jodrell Bank Center for Astrophysics, University of Manchester, Manchester, UK </li>
 								<li><b>October 2022-June 2023: </b> Analyst-Data Science, American Express</li>
 								<li><b>August 2020-August 2022: </b> Master's Student (M.Sc. Astronomy), Department of Astronomy, Astrophysics, and Space Engineering, Indian Institute of Technology, Indore, Madhya Pradesh, India </li>
 								<li><b>August 2016-May 2019: </b> Undergraduate Student (B.Sc. Physics), Maitreyi College, University of Delhi, Delhi, India </li>
