--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 						<section id="six">
 							<div class="container">
 								<h3>Hobbies in Blogs: </h3>
-									<a href="https://art.sohinidutta.com"><h4>Art, Travel, and Photography</h4></a>
-									<a href="https://blog.sohinidutta.com"><h4>Science and Life in Academia</h4></a>
+									<a href="https://anartcauldron.wordpress.com"><h4>Art, Travel, and Photography</h4></a>
+									<a href="https://thiswonderfulcosmos.wordpress.com"><h4>Science and Life in Academia</h4></a>
 								
 							</div>
 						</section>
