--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 						<!-- Six -->
 						<section id="six">
 							<div class="container">
-								<h3>Hobbies in Blogs: </h3>
+								<h3>Hobbies: </h3>
 									<a href="https://anartcauldron.wordpress.com"><h4>Art, Travel, and Photography</h4></a>
 									<a href="https://thiswonderfulcosmos.wordpress.com"><h4>Science and Life in Academia</h4></a>
 								
