changed title font and updated CV

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Sohini Dutta</h2>
+										<h2 style="font-family: 'Beth Ellen'; font-size: 40px;">Sohini Dutta</h2>
 										<h3> About Me </h3>
 									</header>
 									<p>I am a PhD student at the Jodrell Bank Centre for Astrophysics-The University of Manchester. I am a PhD student at the Jodrell Bank Centre for Astrophysics-The University of Manchester. My current research interests lie in the field of Cosmology and the very early universe, particularly in the areas of Inflation, Galaxy Evolution, Cosmic Dawn, the Epoch of Reionization etc. If you would like to chat with me, send me an email! 
