fixed heading colours

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 								<li><b>August 2016-May 2019: </b> Undergraduate Student (B.Sc. Physics), Maitreyi College, University of Delhi, Delhi, India </li>
 								</p>
 
-								<h4>Side hustles: </h4>
+								<h4> <b>Side hustles:</b> </h4>
 								<p><ul>
 									<li>Graduate Teaching Assistant (January 2024-May 2024): Object-Oriented Programming in C++, The University of Manchester, Manchester, UK</li>
 									<li>Cosmology Lunch host (April 2024-present): Host of the weekly Cosmology journal club at Jodrell Bank Centre for Astrophysics, The University of Manchester, Manchester, UK </li>
