--- a/publications.html
+++ b/publications.html
@@ -14,7 +14,7 @@
         <span class="image avatar"><img src="images/avatar.jpg" alt=""/></span>
         <p>
           Hi! Welcome to my little corner of the internet!<br/>
-          <a href="mailto:sohinixcvii@gmail.com">Send me an email.</a><br/>
+          <a href="/cdn-cgi/l/email-protection#0e7d6166676067766d7867674e69636f6762206d6163">Send me an email.</a><br/>
           <a href="assets/CV_Dutta.pdf" download="CV_SohiniDutta.pdf">Download my CV</a>
         </p>
       </header>
@@ -37,6 +37,11 @@
 
     <div id="wrapper">
       <div id="main">
+        <section>
+          <div class="image main" data-position="center">
+            <img src="images/autumn_jodrell.jpeg" alt=""/>
+          </div>
+        </section>
         <section>
           <div class="container">
             <h3>Publications</h3>
@@ -66,13 +71,9 @@
       </section>
     </div>
 
-    <script src="assets/js/jquery.min.js"></script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.scrollex.min.js"></script>
     <script src="assets/js/jquery.scrolly.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/page-transitions.js"></script>
-  </body>
-</html>
+    <script src=
