Cleaned up website

--- a/journey.html
+++ b/journey.html
@@ -12,10 +12,13 @@
     <section id="header">
       <header>
         <span class="image avatar"><img src="images/avatar.jpg" alt=""/></span>
+        <h2 style="font-family:'Beth Ellen'; font-size:40px;">Sohini Dutta</h2>
         <p>
           Hi! Welcome to my little corner of the internet!<br/>
-          <a href="/cdn-cgi/l/email-protection#1b68747372757263786d72725b7c767a727735787476">Send me an email.</a><br/>
-          <a href="assets/CV_Dutta.pdf" download="CV_SohiniDutta.pdf">Download my CV</a>
+          Want to get in touch?
+          <a href="mailto:sohinixcvii@gmail.com"> <i>Send me an email </i></a><br/>
+          More about my work:
+          <a href="assets/CV_Dutta.pdf" download="CV_SohiniDutta.pdf"> <i>Download my CV</i></a>
         </p>
       </header>
       <nav id="nav">
@@ -60,6 +63,7 @@
               <li>GTA (Jan–May 2024): Object-Oriented Programming in C++</li>
               <li>Cosmology Lunch host (Apr 2024–present): weekly journal club at JBCA — <a href="https://marshy-warrior-50b.notion.site/Cosmology-Lunch-Autumn-2025-271429c8a8b2809680eed64601c8f865">link</a></li>
               <li>Web Manager for <a href="https://www.jb.man.ac.uk/meetings/equitea/">EquiTea</a> (Nov 2023–present)</li>
+              <li>Student Lead for EquiTea (March 2026–present)</li>
             </ul>
           </div>
         </section>
@@ -75,9 +79,13 @@
       </section>
     </div>
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.scrollex.min.js"></script>
     <script src="assets/js/jquery.scrolly.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
-    <script src=
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/page-transitions.js"></script>
+  </body>
+</html>
