--- a/publications.html
+++ b/publications.html
@@ -12,10 +12,13 @@
     <section id="header">
       <header>
         <span class="image avatar"><img src="images/avatar.jpg" alt=""/></span>
+        <h2 style="font-family:'Beth Ellen'; font-size:40px;">Sohini Dutta</h2>
         <p>
           Hi! Welcome to my little corner of the internet!<br/>
-          <a href="/cdn-cgi/l/email-protection#0e7d6166676067766d7867674e69636f6762206d6163">Send me an email.</a><br/>
-          <a href="assets/CV_Dutta.pdf" download="CV_SohiniDutta.pdf">Download my CV</a>
+          Want to get in touch?
+          <a href="mailto:sohinixcvii@gmail.com"> <i>Send me an email </i></a><br/>
+          More about my work:
+          <a href="assets/CV_Dutta.pdf" download="CV_SohiniDutta.pdf"> <i>Download my CV</i></a>
         </p>
       </header>
       <nav id="nav">
@@ -71,9 +74,13 @@
       </section>
     </div>
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.scrollex.min.js"></script>
     <script src="assets/js/jquery.scrolly.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
-    <script src=
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/page-transitions.js"></script>
+  </body>
+</html>
